Fixed alignment issue in main section

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -6,8 +6,7 @@
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
-  }
-  
+    }  
 /* header styles */
 .header{
         background-image: url('../Assets/Hero-bg.png');
@@ -135,7 +134,7 @@ section ul li{
 width: 430px ;
 height: 328px ;
 border-radius: 48px;
- margin-top: 116px;
+margin-top: 116px;
 }
 
 /*  2nd Section */
@@ -184,3 +183,55 @@ main{
     margin-top: 10px;
     margin-bottom:20px;
 }
+
+/* challenages  */
+
+.reviews-style{
+    display: flex;
+    gap: 20px;
+    margin-top: 50px;
+}
+
+.reviewer-info{
+    display: flex;
+}
+
+.review{
+    padding: 16px;
+    box-shadow:0px 4px 4px 0px rgba(0, 0, 0, 0.25) ;
+    border-radius: 16px;
+}
+.section03-heading{
+    font-size: 48px;
+    font-weight: bold;
+    color: #252432;
+    text-align: center;
+    margin-top: 137px;
+}
+
+
+/* last main section  */
+.heading-center{
+    text-align: center;
+}
+
+.sec04{
+    display: flex;
+}
+
+.section-header{
+    font-size: 96px;
+    font-weight: bold;
+    color: #000000;
+
+}
+main  input[type="email"] {
+    width: 50%;
+    height: 70px;
+    border-radius: 10px;
+    border: 1px solid gray;
+    padding: 20px;
+    font-size: 16px;
+    margin-top: 92px;
+}
+
